[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Denis <allmediasale@icloud.com>"]
readme = "README.md"
repository = "https://github.com/Sapphireisone/python-project-lvl1/"
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.8.1"
prompt = "^0.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"


[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.scripts_even:main"
brain-calc = "brain_games.scripts.scripts_calc:main"
brain-gcd = "brain_games.scripts.scripts_gcd:main"
brain-progression = "brain_games.scripts.scripts_progression:main"
brain-prime = "brain_games.scripts.scripts_prime:main"
